# jellybot

./: .gitignore  Cargo.toml  README.md
src/: env_loader.rs  main.rs
src/catchers/: error_catchers.rs  mod.rs
src/entities/: item.rs  mod.rs  radarr_item.rs  reply_markup.rs  telegram_photo.rs  telegram_text.rs
src/locales/: ca.json
src/routes/: mod.rs
src/services/: mod.rs
src/services/jellyfin/: mod.rs  responses.rs
src/services/telegram/: mod.rs
src/traits/: telegram.rs
